# ncurses

./: CMakeLists.txt  DetermineDataType.h  NcursesProgressBar.h  StreamReadFile.h  main.cpp
